[package]
name = "homes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the HelloWorld gRPC server
name = "server"
path = "src/server/main.rs"

[dependencies]
tonic = "0.8.3"
prost = "0.11.8"


[build-dependencies]
tonic-build = "0.8.3"
